--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+html,
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+html {
+  scroll-behavior: smooth;
+}
